# HRP-4_control_DE-soft_sole_stabilizer

./: CMakeLists.txt  README.md  package.xml
launch/: test_playback_bridge.launch  test_playback_bridge_stableloop.launch
meshes/: bucket.dae
msg/: WrenchArray.msg
rviz_config/: test_playback_bridge.rviz  test_playback_bridge_stableloop.rviz
scripts/: gain_interpolator.py  humoto_bridge.py  markers_zmp_com_stableloop.py  robot_state.py  stabilizer_msg_helper.py  stop_experiment_helper.py  swing_foot_trajectory.py  tasks_helper.py  test_playback_bridge.py  test_playback_bridge_stableloop.py  walk_PG_markers.py  walk_PG_markers_stableloop.py  zmp_com_playback_bridge.py  zmp_com_playback_bridge_controlloop.py  zmp_com_playback_bridge_controlloop_global.py  zmp_com_playback_bridge_stableloop.py
srv/: setCoMVelDes.srv  stopWalk.srv
trajectoire_zmp/: pstep.txt  zmp_and_com.txt
trajectoire_zmp/deformables/: J_l.txt  J_r.txt
urdf/: bucket.urdf  stretcher.urdf  stretcher.xacro  table.urdf
