<?xml version="1.0"?>
<package>
  <name>hri_scenario</name>
  <version>0.0.0</version>
  <description>The hri scenario package:
    used to do human-robot interaction experiments
    using the QP of Joris
  </description>

  <maintainer email="joven@todo.todo">joven</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>tcp_ros_bridge_msgs</run_depend>
</package>
